# template_pools_rules_tools

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  ISA.md  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  export.toml  pyproject.toml
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml
manuscript/: 00_frontmatter.md  01_abstract.md  03_pools.md  04_rules.md  05_tools.md  06_integration.md  07_conclusion.md  AGENTS.md  README.md  config.yaml  config.yaml.example  preamble.md
manuscript/figures/: AGENTS.md  README.md
output/.checkpoints/: pipeline_checkpoint.json
output/data/: manuscript_variables.json
output/figures/: figure_registry.json
output/manuscript/: 00_frontmatter.md  01_abstract.md  02_introduction.md  03_pools.md  04_rules.md  05_tools.md  06_integration.md  07_conclusion.md  config.yaml  references.bib
output/pdf/: _combined_manuscript.aux  _combined_manuscript.bbl  _combined_manuscript.blg  _combined_manuscript.md  _combined_manuscript.tex  _combined_manuscript.toc
output/reports/: artifact_manifest.json  evidence_registry.json  lessons.jsonl  lessons.md  next_run_context.md  output_statistics.json  output_statistics.txt  pause_recommendations.json  pipeline_report.html  pipeline_report.json  pipeline_report.md  telemetry.json  telemetry.txt  test_results.json  test_results.md  (+2 more)
scripts/: 01_validate_sources.py  02_run_integration.py  03_generate_manuscript.py  04_validate_strong_rules.py  05_generate_figures.py  AGENTS.md  README.md  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  cover_figure.py  figures.py  fonds_reader.py  integration.py  manuscript_variables.py  rule_hierarchy_figure.py  rules_applier.py  strong_rule_evaluator.py  tools_invoker.py  type_defs.py
tests/: AGENTS.md  README.md  test_coverage_extras.py  test_figures.py  test_fonds_reader.py  test_generate_figures_script.py  test_integration.py  test_manuscript_variables.py  test_property_based.py  test_rules_applier.py  test_strong_rule_evaluator.py  test_tools_invoker.py
(+70 files in other folders)
