# Pools, Rules, and Tools — Meta-Project Configuration
# Demonstrates integration of fonds/, tools/, and rules/ resource directories.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_pools_rules_tools"
version = "1.0.0"
description = "Meta-project demonstrating fonds, tools, and rules integration"
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"}
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/test_*.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
# Inherits workspace settings from root pyproject.toml

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
allow_untyped_defs = false
disallow_any_unimported = true
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_decorated = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yaml", "csv", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PTH"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501", "N999"]  # Executable stage names and path bootstrap imports
